--- a/css/index_style.css
+++ b/css/index_style.css
@@ -1,148 +1,150 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500);
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css);
+@import url('https://fonts.googleapis.com/css?family=Lobster');
+
 *, *:before, *:after {
   box-sizing: border-box;
 }
 
-
 html, body {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-	    height: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
 body {
-      font-family: 'Karla', sans-serif;
-      font-weight: lighter;
+  font-family: 'Karla', sans-serif;
+  font-weight: lighter;
 }
 
 header {
-      width: 100%;
-      height: 14vh;
-      /* background: url(https://i.imgur.com/uETAv18.jpg) no-repeat 50% 50%;
-      background-size: cover; */
+  width: 100%;
+  height: 100vh;
+  background: url(../pics/garden.jpg) no-repeat 50% 50%;
+  background-size: cover;
 }
 
 .content {
-      width: 94%;
-      margin: 4em auto;
-      font-size: 20px;
-      line-height: 30px;
-      text-align: justify;
+  width: 94%;
+  margin: 4em auto;
+  font-size: 20px;
+  line-height: 30px;
+  text-align: justify;
 }
 
 .logo {
-      line-height: 60px;
-      position: fixed;
-      float: left;
-      margin: 16px 46px;
-      color: #fff;
-      font-weight: bold;
-      font-size: 20px;
-      letter-spacing: 2px;
-	  top: -7px;
+  line-height: 60px;
+  position: absolute;
+  float: left;
+  margin: 10px 20px;
+  color: #fff;
+  font-weight: bold;
+  font-size: 20px;
+  letter-spacing: 2px;
+  top: -7px;
 }
 
-#logo_sek{
-
-      width: 50px;
-      height: auto;
+#logo_sek {
+  width: 55px;
+  height: auto;
 }
 
-#name{
-	font-size: 19px;
-	position: fixed;
-	padding-top: 30px;
-	left: 100px;
-	top: -10px;
-	line-height: 25px;
-}
-
-#name .motto{
-	font-size: 14px;
-	font-style: italic;
-	padding-right: 30px;
+.name {
+  position: fixed;
+  margin: -6px 90px;
+  font-size: 17px;
+  color: #fff;
+  font-weight: 700;
+  font-family: 'Lobster', cursive;
+  letter-spacing: 1.5px;
 }
 
 nav {
-      position: fixed;
-      width: 100%;
-      line-height: 60px;
+  position: fixed;
+  width: 100%;
+  line-height: 60px;
 }
 
 nav ul {
-      line-height: 60px;
-      list-style: none;
-      background: rgba(0, 0, 0, 0);
-      overflow: hidden;
-      color: #fff;
-      padding: 0;
-      text-align: right;
-      margin: 0;
-      padding-right: 40px;
-      transition: 1s;
+  line-height: 60px;
+  list-style: none;
+  background: rgba(0, 0, 0, 0.7);
+  overflow: hidden;
+  color: #fff;
+  padding: 0;
+  text-align: right;
+  margin: 0;
+  padding-right: 40px;
+  transition: 1s;
 }
 
 nav.black ul {
-      background: rgba(38, 38, 38, 0.8);
-	  color: #fff;
+  background: rgba(38, 38, 38, 0.8);
+  color: #fff;
 }
 
 nav ul li {
-      display: inline-block;
-      padding: 16px 17px 0px;
+  display: inline-block;
+  padding: 16px 17px 0px;
 }
 
 nav ul li a {
-      text-decoration: none;
-      font-size: 16px;
-	    color: white;
+  text-decoration: none;
+  font-size: 16px;
+  color: white;
 }
-
 
 .menu-icon {
-      line-height: 60px;
-      width: 100%;
-      background: rgba(38, 38, 38, 0.8);
-      text-align: right;
-      box-sizing: border-box;
-      padding: 15px 24px;
-      cursor: pointer;
-      color: #fff;
-      display: none;
+  line-height: 50px;
+  width: 100%;
+  background: rgba(38, 38, 38, 0.8);
+  text-align: right;
+  box-sizing: border-box;
+  padding: 15px 24px;
+  cursor: pointer;
+  color: #fff;
+  display: none;
 }
 
-@media(max-width: 786px) {
+@media(max-width: 910px) {
+  .logo {
+    position: fixed;
+    top: 0;
+    margin: 10px 20px;
+  }
 
-      .logo {
-            position: fixed;
-            top: 0;
-            margin-top: 16px;
-      }
+  .name {
+    position: fixed;
+    margin: -85px 90px;
+    font-size: 17px;
+    color: #fff;
+    font-weight: 700;
+    font-family: 'Lobster', cursive;
+    letter-spacing: 1.5px;
+  }
 
-      nav ul {
-            max-height: 0px;
-            background: #000;
-      }
+  nav ul {
+    max-height: 0px;
+    background: rgba(0, 0, 0, 0.7);
+  }
 
-      nav.black ul {
-            background: #000;
-      }
+  nav.black ul {
+    background: rgba(0, 0, 0, 0.7);
+  }
 
-      .showing {
-            max-height: 34em;
-      }
+  .showing {
+    max-height: 34em;
+  }
 
-      nav ul li {
-            box-sizing: border-box;
-            width: 100%;
-            padding: 24px;
-            text-align: center;
-      }
+  nav ul li {
+    box-sizing: border-box;
+    width: 100%;
+    padding: 5px;
+    text-align: center;
+  }
 
-      .menu-icon {
-            display: block;
-      }
-
+  .menu-icon {
+    display: block;
+  }
 }
